--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -103,3 +103,45 @@
   border-radius: 50%;
   font-weight: bold;
 }
+/* Menu Button Styles */
+.nav-left-button {
+  background: none;
+  background-color:rgb(24, 22, 22);
+  border: 1px solid transparent;
+  color: white;
+  padding: 5px 10px;
+  margin-right: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border-radius: 2px;
+  width: 90px;
+}
+
+.nav-left-button:hover {
+  border: 1px solid white;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .nav-left button {
+    padding: 5px 5px;
+    font-size: 12px;
+  }
+}
+
+.nav-right-button {
+  background: none;
+  border: 1px solid transparent;
+  color: white;
+  padding: 5px 10px;
+  margin-left: 10px;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.nav-right-button:hover {
+  border: 1px solid white;
+}
