--- a/frontend/src/pages/Products.css
+++ b/frontend/src/pages/Products.css
@@ -12,8 +12,11 @@ body {
 }
 
 .products-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  /* display: grid;
+  grid-template-columns: repeat(8, 1fr); */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   gap: 20px;
 }
 
