--- a/frontend/src/pages/Products.css
+++ b/frontend/src/pages/Products.css
@@ -13,8 +13,10 @@ body {
 
 .products-grid {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+  width: 100%;
+  height: 40%;
 }
 
 .product-card {
